--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -3,6 +3,15 @@
 <%= @article.content %>
 
 <form method="post" action="/articles/<%= @article.id %>">
+  <br/>
   <input type="hidden" name="_method" value="delete" />
-  <input type="submit" />
+  <input type="submit" value="DELETE ARTICLE" />
 </form>
+
+
+
+
+
+
+
+
